--- a/ClothingAppAPI/appsettings.json
+++ b/ClothingAppAPI/appsettings.json
@@ -8,5 +8,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": {
+    "Key": "hungsonandsupersecretkeythatislongestkey",
+    "Issuer": "xungxinh.com",
+    "Audience": "xungxinh.com"
+  },
+
+  "CloudinarySettings": {
+    "CloudName": "dkeutds5y",
+    "ApiKey": "664421176933757",
+    "ApiSecret": "V0J4pFQAt76WHFVvncVqq7hr4GY"
+  },
   "AllowedHosts": "*"
 }
