Update JWT token

--- a/ClothingAppAPI/appsettings.json
+++ b/ClothingAppAPI/appsettings.json
@@ -9,10 +9,11 @@
     }
   },
 
-  "Jwt": {
-    "Key": "hungsonandsupersecretkeythatislongestkey",
+  "JwtSettings": {
+    "SecretKey": "hungsonanhthelongestsecretkeythatnoonecanopen",
     "Issuer": "xungxinh.com",
-    "Audience": "xungxinh.com"
+    "Audience": "xungxinh.com",
+    "ExpirationMinutes": "60"
   },
 
   "CloudinarySettings": {
